--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: GMD 꿱포럼
+description: Geometry Dash 꿱 포럼에 오신것을 환영합니다!
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
