--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ theme: just-the-docs
 url: https://just-the-docs.github.io
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  데몬리스트 보러가기: https://github.com/just-the-docs/just-the-docs-template
