--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ exclude:
   - fixtures/
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/assets/images/quack_logo.png"
+# logo: "/assets/images/quack_logo.png"
 
 # Enable or disable the site search
 # Supports true (default) or false
